# gl-fovrender

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shader_utils.h
params/: params.ini
shaders/: fragment_shader.glsl  hex_land_frag.glsl  vertex_shader.glsl  wave_shader_frag.glsl
src/: main.cpp  renderer.cpp  renderer.h  shader_utils.cpp  shader_utils.h  sockets.h  utils.h
src/shaders/: README.md  fov_render_frag.glsl  non_fr_frag.glsl  reconstruction_shader.glsl  shaders.md  vertex_shader.glsl
src/shaders/main/: example.glsl
